k8s/aws/02-details.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: details
  namespace: pinger-app
  labels:
    app: details
spec:
  replicas: 2
  selector:
    matchLabels:
      app: details
  template:
    metadata:
      labels:
        app: details
    spec:
      containers:
        - name: details
          image: <AWS_ACCOUNT_ID>.dkr.ecr.ap-south-1.amazonaws.com/learnathon-details:v1
          ports:
            - containerPort: 4000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 256Mi
          readinessProbe:
            tcpSocket:
              port: 4000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 4000
            initialDelaySeconds: 10
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: details-service
  namespace: pinger-app
  labels:
    app: details
spec:
  selector:
    app: details
  ports:
    - port: 4000
      targetPort: 4000
  type: ClusterIP
