k8s/aws/03-pinger-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pinger-v1
  namespace: pinger-app
  labels:
    app: pinger
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pinger
      version: v1
  template:
    metadata:
      labels:
        app: pinger
        version: v1
    spec:
      containers:
        - name: pinger
          image: <AWS_ACCOUNT_ID>.dkr.ecr.ap-south-1.amazonaws.com/learnathon-pinger-v1:v1
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 256Mi
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: pinger-v1-service
  namespace: pinger-app
  labels:
    app: pinger
    version: v1
spec:
  selector:
    app: pinger
    version: v1
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
